--- a/style.css
+++ b/style.css
@@ -1,5 +1,60 @@
-@import url("https://fonts.googleapis.com/css?family=Inter");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-body { 
-  font-family:"Inter", serif;
+body {
+  font-family: "Inter", sans-serif;
+  transition: 0.6s ease;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 48px;
+  height: 24px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: hsl(230, 22%, 74%);
+  border-radius: 34px;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 27px;
+  bottom: 3px;
+  border-radius: 50%;
+  background-color: white;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+input:checked+.slider {
+  background-image: linear-gradient(to right, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+
+}
+
+input:focus+.slider {
+  box-shadow: 0 0 1px hsl(230, 22%, 74%);
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(-24px);
+  transform: translateX(-24px);
+  background-color: hsl(228, 28%, 20%);
 }
